# aeroinfo

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  API.md  LICENSE  README.md  alembic.ini  base.py  database.py  download_nasr.py  enums.py  import.py  models.py  pyproject.toml  query.py  requirements-base.txt  requirements.txt
aeroinfo/: __init__.py  download_nasr.py  import.py
aeroinfo/database/: __init__.py  base.py  enums.py
aeroinfo/database/models/: apt.py  nav.py
aeroinfo/parsers/: __init__.py  apt.py  nav.py  utils.py
alembic/: env.py
alembic/versions/: 202206131631_88479bf118a1_initial_version.py  202206132000_e479b66dc3fb_add_navaid_tables.py  202206151826_0bf3e62ca4e2_align_the_faa_region_columns_in_.py  202212021923_618d19385afc_clear_beacon_color_changed_to_white.py  202511170334_d597f9fdae33_.py
database/: __init__.py  base.py  enums.py  models.py
database/models/: __init__.py  apt.py  nav.py
parsers/: __init__.py  apt.py  nav.py  utils.py
references/: apt_rf.txt  nav_rf.txt  new.out  old.out
tests/: conftest.py  test_enum_serialization.py  test_parsers.py  test_parsers_fast.py  test_query_behaviors.py  test_struct_parser.py
tests/fixtures/: APT_min.txt  NAV_min.txt
